--- a/src/components/Display/TimerDisplay.css
+++ b/src/components/Display/TimerDisplay.css
@@ -1,1 +1,10 @@
+.timer {
+  width: 100vw;
+}
 
+.timer-buttons {
+  width: 100%;
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+}
