--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,5 @@
+@import "https://fonts.googleapis.com/css?family=Jost";
+
 * {
   margin: 0;
   padding: 0;
@@ -12,9 +14,8 @@ body {
   height: 100%;
   margin: 0;
   display: relative;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Jost", sans-serif;
+  text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
