--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,6 @@ html {
 
 body {
   height: 100%;
-  background: #f8b195;
-  background: -moz-linear-gradient(180deg, #f8b195 50%, #f67280 60%, #c06c84 70%, #355c7d 80%, #6c5b7b 99%);
-  background: -webkit-linear-gradient(180deg, #f8b195 50%, #f67280 60%, #c06c84 70%, #355c7d 80%, #6c5b7b 99%);
-  background: linear-gradient(180deg, #f8b195 50%, #f67280 60%, #c06c84 70%, #355c7d 80%, #6c5b7b 99%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f8b195",endColorstr="#6c5b7b",GradientType=1);
   margin: 0;
   display: relative;
   font-family: "Jost", sans-serif;
@@ -47,13 +42,10 @@ button {
   justify-content: center;
 }
 
-.background-gradient {
+body {
   background: #f8b195;
   background: -moz-linear-gradient(180deg, #f8b195 50%, #f67280 60%, #c06c84 70%, #355c7d 80%, #6c5b7b 99%);
   background: -webkit-linear-gradient(180deg, #f8b195 50%, #f67280 60%, #c06c84 70%, #355c7d 80%, #6c5b7b 99%);
   background: linear-gradient(180deg, #f8b195 50%, #f67280 60%, #c06c84 70%, #355c7d 80%, #6c5b7b 99%);
-}
-
-.background-gradient-filter {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f8b195",endColorstr="#6c5b7b",GradientType=1);
 }
