Fix typo in import and import scss files from utilities folder

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
-@use "base";
+@use "_base";
 @use "./components/_buttons";
 @use "./components/_timerDisplay";
 @use "./components/_all";
+@use './utilities/_variables';
