Change button background color to value stored in imported sass variable

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,6 +1,9 @@
+@import "../utilities/variables";
+
 button {
   padding: 13px 26px;
   border: none;
+  background: $button-color-primary;
   border-radius: 5px;
   margin: 0px 5px;
   cursor: pointer;
