--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,4 @@
+@import "./utilities/variables";
 @import "https://fonts.googleapis.com/css?family=Jost";
 
 * {
@@ -8,6 +9,7 @@
 
 html {
   height: 100%;
+  font-size: $default-font-size;
 }
 
 body {
