Set font size for h1 and h2 elements

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,6 +12,14 @@ html {
   font-size: $default-font-size;
 }
 
+h1 {
+  font-size: 4.8rem;
+}
+
+h2 {
+  font-size: 4.2rem;
+}
+
 body {
   height: 100%;
   margin: 0;
