--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,14 @@ html {
   font-size: 62.5%;
 }
 
+h1 {
+  font-size: 4.8rem;
+}
+
+h2 {
+  font-size: 4.2rem;
+}
+
 body {
   height: 100%;
   margin: 0;
